@@ -90,7 +90,7 @@ public:
              ChannelType green,
              ChannelType blue,
              ChannelType alpha = wxALPHA_OPAQUE)
-        { InitRGBA(red,green,blue, alpha); }
+        { InitRGBA(red, green, blue, alpha); }
 
     // implemented in colourcmn.cpp
     bool Set(const wxString &str)
@@ -118,6 +118,27 @@ public:
 
     // implemented in colourcmn.cpp
     virtual wxString GetAsString(long flags = wxC2S_NAME | wxC2S_CSS_SYNTAX) const;
+
+    void SetRGB(wxUint32 colRGB)
+    {
+        Set((ChannelType)(0xFF & colRGB),
+            (ChannelType)(0xFF & (colRGB >> 8)),
+            (ChannelType)(0xFF & (colRGB >> 16)));
+    }
+
+    void SetRGBA(wxUint32 colRGBA)
+    {
+        Set((ChannelType)(0xFF & colRGBA),
+            (ChannelType)(0xFF & (colRGBA >> 8)),
+            (ChannelType)(0xFF & (colRGBA >> 16)),
+            (ChannelType)(0xFF & (colRGBA >> 24)));
+    }
+
+    wxUint32 GetRGB() const
+        { return Red() | (Green() << 8) | (Blue() << 16); }
+
+    wxUint32 GetRGBA() const
+        { return Red() | (Green() << 8) | (Blue() << 16) | (Alpha() << 24); }
 
 #if !wxCOLOUR_IS_GDIOBJECT
     virtual bool IsOk() const= 0;
