@@ -109,6 +109,7 @@ TEST_GUI_OBJECTS =  \
 	$(OBJS)\test_gui_rect.o \
 	$(OBJS)\test_gui_size.o \
 	$(OBJS)\test_gui_point.o \
+	$(OBJS)\test_gui_colour.o \
 	$(OBJS)\test_gui_measuring.o \
 	$(OBJS)\test_gui_config.o \
 	$(OBJS)\test_gui_comboboxtest.o \
@@ -571,6 +572,9 @@ $(OBJS)\test_gui_size.o: ./geometry/size.cpp
 	$(CXX) -c -o $@ $(TEST_GUI_CXXFLAGS) $(CPPDEPS) $<
 
 $(OBJS)\test_gui_point.o: ./geometry/point.cpp
+	$(CXX) -c -o $@ $(TEST_GUI_CXXFLAGS) $(CPPDEPS) $<
+
+$(OBJS)\test_gui_colour.o: ./graphics/colour.cpp
 	$(CXX) -c -o $@ $(TEST_GUI_CXXFLAGS) $(CPPDEPS) $<
 
 $(OBJS)\test_gui_measuring.o: ./graphics/measuring.cpp
