@@ -113,6 +113,7 @@
             geometry/rect.cpp
             geometry/size.cpp
             geometry/point.cpp
+            graphics/colour.cpp
             graphics/measuring.cpp
             config/config.cpp
             controls/comboboxtest.cpp
