@@ -564,6 +564,9 @@
 				RelativePath=".\events\clone.cpp">
 			</File>
 			<File
+				RelativePath=".\graphics\colour.cpp">
+			</File>
+			<File
 				RelativePath=".\controls\comboboxtest.cpp">
 			</File>
 			<File
